# InquirerPy

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  buildspec.yml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: lint.yml  test.yml
InquirerPy/: __init__.py  base.py  enum.py  exceptions.py  inquirer.py  py.typed  resolver.py  separator.py  spinner.py  util.py  utils.py  validator.py
InquirerPy/base/: __init__.py  complex.py  control.py  list.py  simple.py
InquirerPy/containers/: __init__.py  instruction.py  message.py  spinner.py  tips.py  validation.py
InquirerPy/example/: example_confirm.py  example_filepath.py  example_secret.py
InquirerPy/prompts/: __init__.py  checkbox.py  confirm.py  expand.py  file_path.py  filepath.py  fuzzy.py  input.py  list.py  number.py  rawlist.py  secret.py
InquirerPy/prompts/fuzzy/: __init__.py  fuzzy.py  fzy.py
docs/: Makefile  conf.py  index.md  requirements.txt
docs/pages/: api.md  changelog.md  color_print.md  dynamic.md  env.md  faq.md  height.md  inquirer.md  kb.md  kbi.md  misc.md  patched_print.md  prompt.md  raise_kbi.md  separator.md  style.md  validator.md
docs/pages/prompts/: checkbox.md  confirm.md  expand.md  filepath.md  fuzzy.md  input.md  list.md  number.md  password.md  rawlist.md  secret.md
examples/: async.py  demo_alternate.py  example_checkbox.py  example_confirm.py  example_demo.py  example_demo_classic.py  example_demo_new.py  example_expand.py  example_filepath.py  example_fuzzy.py  example_input.py  example_list.py  example_pizza.py  example_prompt.py  example_rawlist.py  example_secret.py  inquirer.py  pizza.py  prompt.py  requirements.txt
examples/alternate/: checkbox.py  confirm.py  expand.py  filepath.py  fuzzy.py  input.py  list.py  number.py  rawlist.py  secret.py
examples/classic/: checkbox.py  confirm.py  expand.py  filepath.py  fuzzy.py  input.py  list.py  number.py  rawlist.py  secret.py
tests/: style.py  test_inquirer.py  test_resolver.py  test_spinner.py  test_utils.py  test_validator.py
tests/base/: test_complex.py  test_control.py  test_list.py  test_simple.py
tests/containers/: test_instruction.py  test_spinner.py  test_tips.py
tests/prompts/: test_checkbox.py  test_confirm.py  test_expand.py  test_filepath.py  test_fuzzy.py  test_input.py  test_list.py  test_number.py  test_rawlist.py  test_secret.py
