[tool.poetry]
name = "InquirerPy"
version = "0.3.1"
description = "Python port of Inquirer.js (A collection of common interactive command-line user interfaces)"
authors = ["Kevin Zhuang <kevin7441@gmail.com>"]
maintainers = ["Kevin Zhuang <kevin7441@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kazhala/InquirerPy"
documentation = "https://inquirerpy.readthedocs.io"
license = "MIT"
keywords=["cli", "prompt-toolkit", "commandline", "inquirer", "development"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Unix",
  "Operating System :: Microsoft",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development",
  "Topic :: Software Development :: User Interfaces",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
packages = [
  {include = "InquirerPy"}
]

[tool.poetry.dependencies]
python = "^3.7"
prompt-toolkit = "^3.0.1"
pfzy = "^0.3.1"
Sphinx = {version = "^4.1.2", optional = true}
furo = {version = "^2021.8.17-beta.43", optional = true}
sphinx-copybutton = {version = "^0.4.0", optional = true}
sphinx-autobuild = {version = "^2021.3.14", optional = true}
myst-parser = {version = "^0.15.1", optional = true}

[tool.poetry.dev-dependencies]
pre-commit = "^2.11.1"
isort = "^5.9.1"
black = "^21.6b0"
pydocstyle = "^6.1.1"
coveralls = "^3.2.0"

[tool.poetry.extras]
docs = ["Sphinx", "furo", "myst-parser", "sphinx-autobuild", "sphinx-copybutton"]

[tool.isort]
profile = "black"

[tool.pydocstyle]
match = "^(?!(.*(init|main))).*\\.py"
convention = "pep257"
add-ignore = "D107"
match_dir = "^(?!(example)).*"

[tool.coverage.run]
source = ["InquirerPy"]

[tool.coverage.report]
ignore_errors = true
exclude_lines = [
    "if TYPE_CHECKING:"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
